k8s/gqlApiServer/deployment-leeko-api-server.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    deployment.kubernetes.io/revision: '5'
  selfLink: /apis/apps/v1/namespaces/brian/deployments/leeko-api-server
  resourceVersion: '71425712'
  name: leeko-api-server
  uid: 3a2c15c2-76e2-11ea-9777-0ab1f070a510
  creationTimestamp: '2020-04-05T02:07:39Z'
  generation: 7
  namespace: brian
  labels:
    run: leeko-api-server
spec:
  replicas: 3
  selector:
    matchLabels:
      run: leeko-api-server
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: leeko-api-server
    spec:
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: leeko-api-server
          ports:
            - containerPort: 4000
              protocol: TCP
          imagePullPolicy: Always
          terminationMessagePolicy: File
          image: 'chylomicronman/leekoapiserver:0.0.2'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status:
  observedGeneration: 7
  replicas: 3
  updatedReplicas: 3
  readyReplicas: 3
  availableReplicas: 3
  conditions:
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2020-04-07T00:11:05Z'
      lastTransitionTime: '2020-04-05T02:07:39Z'
      reason: NewReplicaSetAvailable
      message: ReplicaSet "leeko-api-server-756cc78598" has successfully progressed.
    - type: Available
      status: 'True'
      lastUpdateTime: '2020-04-09T00:24:39Z'
      lastTransitionTime: '2020-04-09T00:24:39Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
